[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bgpview"
version = "1.0.0"
description = "BGPView.io client. Fork of https://github.com/jayswan/bgpview"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload"
]

[project.urls]
"Homepage" = "https://github.com/ArctonyxLLC/bgpview"
